--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -9,7 +9,7 @@ comments: true
 如果一个类比较复杂，我会按照下面的顺序写一个类。
 
 
-```c++
+```cpp
 class A : public interface{
 public: // 类静态函数
      static class_method1() ; //
