--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -44,7 +44,7 @@ private:
 
 这个不属于类对象，通常是一些构造对象用的函数。
 
-```c++
+```cpp
 class A_interface {
 public:
      static A * create();
@@ -62,7 +62,7 @@ public:
  - 只有一个 类方法 `Create()`
  - 从用户的角度上看，这个结构一目了然，调用
 
-```c++
+```cpp
 A_interface * obj= A_interface::Create();
 obj->interface1();
 obj->interface2();
@@ -100,7 +100,7 @@ obj->interface2();
 
 ### 首先创建一个 cmd.h
 
-```c++
+```cpp
 #pragma once
 #include <string>
 // using namespace std
@@ -116,7 +116,7 @@ public:
 
 - 用 `#progam once` 代替
 
-```c++
+```cpp
 #ifndef CMD_H
 #define CMD_H
 ....
@@ -151,7 +151,7 @@ cmd_c 的对象。这就是纯虚函数的好处。
 
 ## 创建 main.cpp
 
-```c++
+```cpp
 #include "cmd.h"
 using namespace std;
 int main(int argc, char *argv[])
@@ -167,7 +167,7 @@ int main(int argc, char *argv[])
 
 ## 创建 `cmd_args.h` ，第一个 `cmd_c` 的实现
 
-```c++
+```cpp
 #pragma once
 #include "cmd.h"
 class cmd_args_c: public cmd_c {
@@ -188,7 +188,7 @@ private:
 
 ### 创建 `cmd_args.cpp`
 
-```c++
+```cpp
 #include <iostream>
 using namespace std;
 #include "cmd.h"
@@ -222,7 +222,7 @@ int cmd_args_c::execute(int argc, char* argv[])
 
 ### 创建 cmd.cpp，定义如何创建具体对象
 
-```c++
+```cpp
 #include <cassert>
 #include "cmd.h"
 #include "cmd_args.h"
@@ -271,7 +271,7 @@ cmd_args.cpp:(.text+0xb1): undefined reference to `cmd_c::~cmd_c()'
 为了遵循这个原则，是不是可以把 `command_table` 放在 `cmd_c::create` 的
 内部。
 
-```c++
+```cpp
 cmd_c * cmd_c::create(string cmd)
 {
    static .... command_table ...;
