--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -116,38 +116,39 @@ public:
 
  - 用 `#progam once` 代替
 
-```cpp
-#ifndef CMD_H
-#define CMD_H
-....
-#endif
-```
+   ```cpp
+   #ifndef CMD_H
+   #define CMD_H
+   ....
+   #endif
+   ```
 
-`#program once` 的好处是，短小。不用三行
+   `#program once` 的好处是，短小。不用三行
 
-也不用担心 `CMD_H` 宏重命名的问题。如果你有连个头文件，一不小心（概率
-很小），两个头文件用同样的宏保护，而且两个头文件同时被引用，就会出问题。
+   也不用担心 `CMD_H` 宏重命名的问题。如果你有连个头文件，一不小心（概率
+   很小），两个头文件用同样的宏保护，而且两个头文件同时被引用，就会出问题。
 
-坏处就是，这个不是所有的编译器都支持，但是幸运的是，几乎所有的编译器都
-支持，包括 vs, gcc, clang 等等。
+   坏处就是，这个不是所有的编译器都支持，但是幸运的是，几乎所有的编译器都
+   支持，包括 vs, gcc, clang 等等。
 
  - 不要使用 using namespace std
 
-在头文件的定义中，尽量不要 using namespace std 这样会引起命名空间污染。
-如果你觉得 `std::string` 比 `string` 长，每次输入 `std::` 很麻烦，可以
-在 cpp文件中，`using namespace std` 。头文件可能被其他用户引用，其他用
-户也许不想使用 namespace `std`。
+   在头文件的定义中，尽量不要 using namespace std 这样会引起命名空间污
+   染。如果你觉得 `std::string` 比 `string` 长，每次输入 `std::` 很麻
+   烦，可以在 cpp文件中，`using namespace std` 。头文件可能被其他用户
+   引用，其他用户也许不想使用 namespace `std`。
 
-`virtual ~cmd_c` 很重要，保证析构函数是虚函数，否则不能调用子类的析构
-函数。
+ - `virtual ~cmd_c` 很重要，保证析构函数是虚函数，否则不能调用子类的析
+   构函数。
 
-因为 `execute` 都是纯虚函数，就不要声明私有的构造函数了。因为如果一个
-类有纯虚函数，则不能构造对象。
+ - 不用禁止构造函数。
 
-因为只能通过 `create` 函数创建 cmd_c 的子类对象，否则无法创建一个
-cmd_c 的对象。这就是纯虚函数的好处。
+   因为 `execute` 都是纯虚函数，就不要声明私有的构造函数了。因为如果一
+   个类有纯虚函数，则不能构造对象。因为只能通过 `create` 函数创建
+   `cmd_c` 的子类对象，否则无法创建一个 `cmd_c` 的对象。这就是纯虚函数
+   的好处。
 
-初学 C++ 的，很容易忽略纯虚函数的作用。
+ - 初学 `C++` 的，很容易忽略纯虚函数的作用。
 
 ## 创建 main.cpp
 
