--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -291,7 +291,7 @@ cmd_c * cmd_c::create(string cmd)
 因为有多个 cpp 的文件，写一个简单的 Makefile
 
 
-{% highlight make %}
+{% highlight makefile %}
 CXXFLAGS += -Wall -Werror -Wextra
 all: busybox
 
