--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -9,7 +9,8 @@ comments: true
 如果一个类比较复杂，我会按照下面的顺序写一个类。
 
 
-```c++
+
+{% highlight c++ %}
 class A : public interface{
 public: // 类静态函数
      static class_method1() ; //
@@ -36,7 +37,7 @@ private:
 
 // 尽量不要使用，protected
 // 尽量不要使用超过三层以上的继承关系。
-```
+{% endhighlight %}
 
 ## 详细展开讨论
 
