--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -259,7 +259,7 @@ cmd_c * cmd_c::create(string cmd)
 在 `cmd.cpp` 里面要定义 `~cmd()` 否则链接的时候会报错
 
 
-{% endhighlight %}
+{% highlight  bash%}
 cmd_args.cpp:(.text+0xb1): undefined reference to `cmd_c::~cmd_c()'
 {% endhighlight %}
 
@@ -290,7 +290,7 @@ cmd_c * cmd_c::create(string cmd)
 因为有多个 cpp 的文件，写一个简单的 Makefile
 
 
-{% endhighlight %}make
+{% highlight  makefile}
 CXXFLAGS += -Wall -Werror -Wextra
 all: busybox
 
@@ -305,7 +305,7 @@ busybox: main.o cmd.o cmd_args.o
 
 ### 使用 make
 
-{% endhighlight %}
+{% highlight  bash%}
 make
 clang++ -Wall -Werror -Wextra   -c -o main.o main.cpp
 clang++ -Wall -Werror -Wextra   -c -o cmd.o cmd.cpp
@@ -315,7 +315,8 @@ clang++ -o busybox main.o cmd.o cmd_args.o
 
 运行
 
-{% endhighlight %}
+
+{% highlight  bash%}
 bash$ ln -s ./busybox args
 bash$ ./args
 argv[0]:./args
