--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -43,7 +43,7 @@ private:
 
 这个不属于类对象，通常是一些构造对象用的函数。
 
-{% highlight c++ %}
+{% highlight cpp %}
 class A_interface {
 public:
      static A * create();
