--- a/_posts/2015-07-08-------C-------.md
+++ b/_posts/2015-07-08-------C-------.md
@@ -43,7 +43,7 @@ private:
 
 这个不属于类对象，通常是一些构造对象用的函数。
 
-{% highlight cpp %}
+{% highlight c++ %}
 class A_interface {
 public:
      static A * create();
@@ -290,7 +290,7 @@ cmd_c * cmd_c::create(string cmd)
 因为有多个 cpp 的文件，写一个简单的 Makefile
 
 
-{% highlight  makefile}
+{% highlight  makefile %}
 CXXFLAGS += -Wall -Werror -Wextra
 all: busybox
 
@@ -305,7 +305,7 @@ busybox: main.o cmd.o cmd_args.o
 
 ### 使用 make
 
-{% highlight  bash%}
+{% highlight  bash %}
 make
 clang++ -Wall -Werror -Wextra   -c -o main.o main.cpp
 clang++ -Wall -Werror -Wextra   -c -o cmd.o cmd.cpp
@@ -316,7 +316,7 @@ clang++ -o busybox main.o cmd.o cmd_args.o
 运行
 
 
-{% highlight  bash%}
+{% highlight  bash %}
 bash$ ln -s ./busybox args
 bash$ ./args
 argv[0]:./args
