--- a/_posts/2015-07-08-C-C---------.md
+++ b/_posts/2015-07-08-C-C---------.md
@@ -129,10 +129,10 @@ _两个 sequence point 之间的求值顺序是没有定义的。_
 sequence point
 
 
-1. a&&b
-2. a||b
-3. a?b:c
-4. a,b 注意这里不是函数调用，而是一个不常用的逗号操作符。
+1. `a&&b`
+2. `a||b`
+3. `a?b:c`
+4. `a,b` 注意这里不是函数调用，而是一个不常用的逗号操作符。
 
 
 
