--- a/_posts/2015-07-08-C------------.md
+++ b/_posts/2015-07-08-C------------.md
@@ -359,7 +359,7 @@ void g(const T& a)
 c++11 rvalue reference 这样解决了这个问题。
 
 
-{% highlight c+ %}
+{% highlight c++%}
 #include <iostream>
 #include <vector>
 using namespace std;
