--- a/_posts/2015-07-10-ZFS-----.md
+++ b/_posts/2015-07-10-ZFS-----.md
@@ -28,3 +28,34 @@ zfs snapshot -R create balbagvaba
 c1@file1:~$ sudo zfs send -R mypool/export@20150708 | mbuffer -s 128k -m 1G -O 192.168.0.114:9090
 
 ```
+
+查看系统瓶颈
+
+```
+top -SH
+gstat
+```
+
+NFS 共享
+
+freeNAS 没有使用 ZFS 的 NFS 共享，而是 freebsd 自带的 NFS 共享。修改
+`/etc/exports` ，或者用图形界面。我的列表比较长，很容易用命令处理。
+
+```
+/mnt/mypool/export/prod
+/mnt/mypool/export/cluster-root -maproot=root
+```
+
+参考 https://www.freebsd.org/doc/handbook/network-nfs.html
+
+修改完了之后，运行
+
+```
+service mountd reload
+```
+
+查看是否生效
+
+```
+showmount -e localhost
+```
