--- a/_posts/2015-07-08-C------------.md
+++ b/_posts/2015-07-08-C------------.md
@@ -596,5 +596,4 @@ return A(100) => return std::move(A(100))
 1. 右值引用是为了库函数作者用的，尤其是模板库。普通应用程序尽量不要用，
    除非你真正理解这个功能。
 2. `std::move` 经常和转右值构造函数配合使用，转移构造函数的形参是右值引用。
-3. `std::forward` 利用左值
-   右值引用。尽量用这个。分享编辑 设置还没有赞
+3. `std::forward` 利用左值引用。尽量用这个。
