--- a/_posts/2015-07-30-ejabberd-的启动过程.md
+++ b/_posts/2015-07-30-ejabberd-的启动过程.md
@@ -136,6 +136,129 @@ TODO: 格式啥意思？
 
 TODO: 单独一个页面描述参数系统的两个功能， macro 和 `include_config_file`。
 
+1. 初始化 mnesia 的表格 `local_config` , [参考](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L57-#L68)
+
+```
+{ { OptionName, Host} , value}
+
+OptionName :: atom()
+Host       :: global | binary() %% as hostname
+
+例如
+
+[{local_config,{access,global},
+                       [{announce,[{admin,allow}]},
+                        {c2s,[{blocked,deny},{all,allow}]},
+                        {c2s_shaper,[{admin,none},{all,normal}]},
+                        {configure,[{admin,allow}]},
+                        {local,[{local,allow}]},
+                        {max_user_offline_messages,[{admin,5000},{all,100}]},
+                        {max_user_sessions,[{all,10}]},
+                        {muc,[{all,allow}]},
+                        {muc_admin,[{admin,allow}]},
+                        {muc_create,[{local,allow}]},
+                        {pubsub_createnode,[{local,allow}]},
+                        {register,[{all,allow}]},
+                        {s2s_shaper,[{all,fast}]},
+                        {trusted_network,[{loopback,allow}]}]},
+         {local_config,{listen,global},[]},
+         {local_config,{log_rate_limit,global},100},
+         {local_config,{shared_key,global},
+                       <<"0536d30a11489ce8fa49cabf3b80b3856ee6d22a">>},
+         {local_config,{auth_method,<<"localhost">>}, [internal,anonymous]},
+         {local_config,{loglevel,global},1},
+         {local_config,{shaper,global},[{normal,1000},{fast,50000}]},
+         {local_config,{log_rotate_size,global},10485760},
+         {local_config,{modules,global},
+                       [{mod_echo,[]},{mod_roster,[]}]},
+         {local_config,{acl,global},
+                       [{admin,[{user,[[{<<"admin1">>,<<"localhost">>}],
+                                       [{<<"ermine">>,<<"example.org">>}]]}]},
+                        {local,[{user_regexp,<<>>}]},
+                        {loopback,[{ip,[<<"127.0.0.0/8">>]}]}]},
+         {local_config,{auth_method,global},internal},
+         {local_config,{node_start,global},1438247600},
+         {local_config,{log_rotate_count,global},1},
+         {local_config,{allow_contrib_modules,global},true},
+         {local_config,{log_rotate_date,global},<<>>},
+         {local_config,{hosts,global},[<<"localhost">>]},
+         {local_config,{max_fsm_queue,global},1000},
+         {local_config,{language,global},<<"en">>}]
+
+```
+
+这里也使用了 `local_content`，不解。如果要支持动态增加 node 就需要修改这里。
+
+删除 `disc_copies` 的表格，奇怪，如果有这样的表格，直接 crash 就好了。
+
+`create_table` 也没有检查是否能成功，应该不成功就直接 crash。
+
+2. [得到配置文件名称](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L89)
+
+   - 首先找命令行参数 `erl -ejabberd config FILE`
+   - 然后环境变量 `EJABBERD_CONFIG_PATH`
+   - 最后用默认参数 `"ejabberd.cfg"`
+
+3. [读取配置文件](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L117)
+
+推荐用 yaml 格式了。[get_plain_terms_file](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L123) 这里的 Opt 用来实现 `macro` 的功能。
+
+```
+ejabberd_config:get_plain_terms_file("b1.yml",[{include_files,true}]).
+[{modules,[]},{hosts,[]},{listen,[]},{y,1},{x,1}]
+```
+
+
+{% highlight yaml %}
+## b1.yml
+include_config_file: "b2.yml"
+y: 1
+{% endhighlight %}
+
+{% highlight yaml %}
+## b2.yml
+include_config_file: "b2.yml"
+y: 1
+{% endhighlight %}
+
+Opt 中的 [include_modules_configs](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L120) 用来加载扩展模块的参数文件。 扩展模块的参数目录是
+[modules_dir](https://github.com/wcy123/ejabberd/blob/e211bf713122322562d950439a7d24c00ff82ed5/src/ext_mod.erl#L351)
+
+  - 首先看环境变量 `CONTRIB_MODULES_PATH`
+  - 然后用默认参数 `~/.ejabberd-modules/`
+  - [filelib:wildcard](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L209) `/*/conf/*.{yml,yaml}`
+
+然后利用 `include_files` 的功能，把他们都加载进来。
+
+[replace_macros](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L124) 的功能是定义宏。
+
+{% highlight yaml %}
+# a.yml
+define_macro:
+    KEY1:
+       a: 1
+       b: 2
+    KEY2:
+       c: 1
+x:
+  name: John Smith
+  age: KEY1
+{% endhighlight %}
+
+```
+(a@debian)31> ejabberd_config:get_plain_terms_file("a.yml",[]).
+[{define_macro,[{'KEY1',[{a,1},{b,2}]},{'KEY2',[{c,1}]}]},  %% 没有宏展开的结果
+ {x,[{name,'John Smith'},{age,'KEY1'}]}]
+(a@debian)31> ejabberd_config:replace_macros(ejabberd_config:get_plain_terms_file("a.yml",[])).
+[{x,[{name,'John Smith'},{age,[{a,1},{b,2}]}]}]   %% 宏展开之后的结果
+```
+
+4. [transform_terms](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L128) 这个功能是为了后向兼容。是吗？
+
+5. [set_opts(State2)](https://github.com/wcy123/ejabberd/blob/76104cd117126a2ac8b20b2ddcce4ec6ff12004a/src/ejabberd_config.erl#L82)
+
+写入 `local_config` 表格。
+
 ## [set_settings_from_config](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L57)
 
  - [设置日志等级](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L242)
@@ -236,3 +359,142 @@ cluster 就可以慢慢长大。
 ## [ejabberd_listener:start_listeners](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L73)
 
 启动监听端口。
+
+### [start_listeners](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L85)
+
+1. 参数 listen 控制 [ejabberd_config:get_option(listen, fun validate_cfg/1)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L86)
+
+```
+(a@debian)42> ejabberd_config:get_option(listen, fun ejabberd_listener:validate_cfg/1).
+[{ {5222,{0,0,0,0},tcp},
+  ejabberd_c2s,
+  [{access,c2s},{shaper,c2s_shaper},{max_stanza_size,65536}]},
+ { {5269,{0,0,0,0},tcp},ejabberd_s2s_in,[]},
+ { {5280,{0,0,0,0},tcp},
+  ejabberd_http,
+  [{captcha,true},
+   {http_bind,true},
+   {web_admin,true},
+   {request_handlers,[{<<"/websocket">>,ejabberd_http_ws}]}]}]
+```
+
+配置了三个监听端口。这里比较怪异的是，`ejabberd_listener` 不是一个 OTP
+behavior ，这样代码读起来比较吃力。
+
+2. 启动各个监听端口 [case start_listener(Port, Module, Opts)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L92)
+
+例如启动 c2s 的时候，参数如下
+
+```
+Port = {5222,{0,0,0,0},tcp},
+Module = ejabberd_c2s,
+Opt = [{access,c2s},{shaper,c2s_shaper},{max_stanza_size,65536}]
+```
+
+3. [start_listener2(Port, Module, Opts)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L351)
+
+   1. [maybe_start_sip(Module)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L355) 其实啥也没干。
+   2. [start_module_sup(Port, Module)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L356)
+
+      以 Module 名义，通过 `ejabberd_tmp_sup` 启动一个假的 `simple_one_for_one` 的 supervisor。
+      这个比较费解。
+
+      1. 会启动一个名字为 `ejabberd_c2s_sup` 的 supervisor ，挂在 `ejabberd_sup` 下面。
+      2. 这个 `ejabberd_c2s_sup` 实际上不存在，真正的 Module 是
+         `ejabberd_tmp_sup` ，通常情况下，supervisor 的名字和 Module
+         的名字是一致的，但是这个不是。
+      3. `ejabberd_c2s_sup` 是一个 supervisor ，所以 ChildSpec 中，
+          1. shutdown 为 infinite ，父领导等子领导，无限时间等。
+          2. restart 为 permanent ，子领导消失，立刻找替代。
+          3. 启动参数是 `[ejabberd_c2s_sup, ejabberd_c2s]`, Proc 和 Module
+      4. 调用 `start_child` 的时候，会调用 `ejabberd_tmp_sup:init`
+          1. 返回一个 `simple_one_for_one` 的 ChildSpec。
+          2. 如果以后在调用 `supervisor:start_clild(ejabberd_c2s_sup)`
+             的时候，会真正调用 ejabber_c2s 中的 `start_link`，
+          3. 然后启动 `ejabberd_c2s:init`
+          4. 糟糕的是，`ejabberd_c2s` 也不是一个正常的 OTP behavior ，
+             而是一个修改过的 fsm
+   3. [supervisor:start_child(ejabberd_listeners, ChildSpec)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L377)
+       1. 这里更让人费解了。会在 `ejabberd_listeners` 下面启动一个新的 supervisor。
+       2. `ejabberd_listeners` 这个 supervisor 是啥时候启动的呢？他是
+          在 `ejabberd_sup` 中的一个 ChildSpec
+          [Listener](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_sup.erl#L93)
+          ，装作自己是一个 supervisor ，可惜`ejabberd_listerners` 就不
+          是一个正常的 OTP behaviors，这样代码的可读性降低。
+          supervisor 也是一个 `gen_server`。
+       3. `ejabberd_listerners` 在
+          [init/1](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L47)
+          中，装作是一个 supervisor ，只不过不管理任何子进程。但是实际
+          上会有三个 listeners 的子进程挂在下面。好乱。init 还顺手
+          bind 了三个 tcp port。不过以后会被回收，不过似乎有一个 bug
+          。表格没有更新。不过不影响使用。 创建表格 [listen_sockets](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L48)。
+       4. [supervisor:start_child(ejabberd_listeners, ChildSpec)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L377) 开始真正启动子进程了。
+           1. 这个子进程对应的模块居然是 `ejabberd_listener` 自己，WTF。
+              刚刚说好了自己是一个 supervisor ，现在又装作是一个
+              `gen_server`，这回调用的是自己的 `start/3` 函数。
+           3. 通常来讲，`start` 和 `start_link` 是一对，区别就是是否有
+              link，但是 `ejabberd_listner` 的这对函数，完全没有关系。
+              `start_link` 是装 supervisor 用的。 `start` 根本就不用
+              export 。`start` 是用来被回调的，装做 `gen_server`。
+           3. [start(Port, Module, Opts)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L113)
+              启动监听端口进程。 刚刚 `staret_child` ，就是回调调用
+              这个 `start`。
+           4. 在 `start` 中，[ModuleRaw:socket_type](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L116)
+              `ejabberd_c2s` 返回 `xmlstream` ，所以我们看
+              [start_dependent](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L118)
+           5. 在 `start_dependent` 中的
+              [check_listener_options(Opts)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L123)
+              检查参数。不影响啥。
+           6. 在 `start_dependent` 中，
+              [proc_lib:start_link(?MODULE, init, [Port, Module, Opts])](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L125)
+              OMG , 这里用非常底层的函数，启动了一个子进程。我们可以去
+              参观 `ejabberd_listener:init` 了。因为是底层函数，所以千万别
+              忘了调用
+              [proc_lib:init_ack({ok, self()})](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L170)
+              。
+           7. 注意 `ejabberd_listener` 有两个 init, `init/3` 和
+              `init/1` ，`init/1` 是装作 supervisor 时候用的。`init/3`
+              是装做 `gen_server` 时候用的。TMD.
+           8. `init/3` 调用 [init_tcp(PortIP, Module, Opts, SockOpts, Port, IPS)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L138)。
+           9. `init_tcp`中，
+              [ListenSocket = listen_tcp(PortIP, Module, SockOpts, Port, IPS)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L168)
+              ，试图重新利用刚刚顺手建立的监听端口。
+           10. 这里有 bug ,
+               [ets:delete(listen_sockets, Port)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L190)
+               ，其实么有删除掉。但是也无关紧要。
+           11. listen 完了就要 accept 了 ，不过因为调用了底层
+               `proc_lib` 库， 所以一定不要忘了
+               [proc_lib:init_ack({ok, self()})](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L170)
+               。
+           12. [erlang:function_exported(Module, tcp_init, 2)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L171)
+               这个有点过了吧，只有 stun 模块定义了这个。过于 OO 了吧？
+           13. [gen_tcp:accept(ListenSocket)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L295) 你终于 block 在这里了。
+           14. 有人来了，就调用 [CallMod:start(strip_frontend(Module), gen_tcp, Socket, Opts)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L309) 接客。
+           15. 去参观 `ejabberd_socket:start` 了, TMD。
+           16. [accept(ListenSocket, Module, Opts)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L310)
+               死循环。Erlang 喜欢死循环。
+           17. `ejabberd_socket:start` 中 关注 [xml_stream](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L81)。
+           18. [SockMod:custom_receiver](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L89)
+               就只有 `ejabberd_http_bind` 有定义，其他都是 error。这
+               样非常不好，如果 `ejabberd_http_bind:custom_receiver`
+               产生意外，就会执行[后面的代码](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L94)，而不是 crash 掉，导致错误
+               一定会发生在后面。 Erlang 的建议 let it crash，crash 在
+               错误发生的最近处。
+           19. [ejabberd_receiver:start](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L95) 你还能缩进的更深吗？创建子进程 `ejabberd_receiver`， 用于解析 xml。
+           20. 终于调用 `ejabberd_c2s:start` 了 [Module:start({?MODULE, SocketData}, Opts)](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L104).
+           21. `ejabberd_c2s:start` 调用 [supervisor:start_child(ejabberd_c2s_sup,[...])](https://github.com/wcy123/ejabberd/blob/1048e21643cb610f112f8dc95d32e3230b819361/src/ejabberd_c2s.erl#L135)
+           18. 注意到刚刚费劲安装的 `ejabberd_c2s_sup` ，现在有用了，
+               启动子进程，调用 `ejabberd_c2s:init` 。初始状态是
+               `wait_for_stream`。以后可以参观来了一个第一个数据包之后
+               该怎么办了。从 [wait_for_stream](https://github.com/wcy123/ejabberd/blob/1048e21643cb610f112f8dc95d32e3230b819361/src/ejabberd_c2s.erl#L354) 开始。
+           21. [case SockMod:controlling_process(Socket, Receiver)](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L106)
+               把 socket 控制权给 `ejabberd_receiver`。
+           22. [{error, _Reason} -> SockMod:close(Socket)](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L108)
+               这里如果传递失败居然不 crash! 还好，这种概率非常低。但
+               是负载高的时候也会发生问题。
+           23. [ReceiverMod:become_controller](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L110)
+               把 `ejabberd_c2s` 的进程 ID 传给 `ejabberd_receiver` 。
+           24. 这里进程 `ejabberd_reciver` 和 进程`ejabberd_c2s` 之间
+               没有直接关系，一个挂掉，另一个接着跑，这个挺奇怪。应该
+               用 `one_for_all` supervisor 把他们连起来。
+、
