--- a/_posts/2015-07-30-ejabberd-的启动过程.md
+++ b/_posts/2015-07-30-ejabberd-的启动过程.md
@@ -31,7 +31,7 @@ comments: false
       ```
       这些参数可以通过命令行设置 erl -ejabberd log_rotate_date 111
       ```
-
+      <a name="lager"> </a>
       问题：既然已经替代掉了，为啥还有一个条件编译 `LAGER` ，[参见这里](https://github.com/wcy123/ejabberd/blob/5a35405cd523127fcd051a38414529680b69505c/include/logger.hrl#L22)
       rebar 的配置文件已经默认定义这个宏了，[参见这里](https://github.com/wcy123/ejabberd/blob/b0453ea2ce8bf5078c345da4b7d8870d025976c2/rebar.config.script#L29)
 
@@ -54,7 +54,7 @@ pid 文件由环境变量 [EJABBERD_PID_PATH](https://github.com/wcy123/ejabberd
 问题: `ejabberd_app:start_app` 中的参数 `Type` 似乎没有使用，似乎准备传递给 `application:start` 但是没有传递。不过默认参数也是 temporary 。[参考这里](https://github.com/wcy123/ejabberd/blob/66310788848ef185f3831648b2abf67ab6ded7fa/src/ejabberd.erl#L81).
 
 StartFlag 似乎只是用来调试的，表明 ejabberd 是否已经加载。
-
+<a name="app_deps"></a>
 问题：Erlang OTP 本身有处理依赖关系的功能，例如
 application:get_key(App, applications) 可以查看依赖关系。利用这个功能，
 整个 `ejabberd_app` 的功能都可以简化了，可读性也变好了。
@@ -77,7 +77,7 @@ modules 是否都已经加载了。相关的系统 API 有。
 
 [初始化数据库](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L116)
 
-问题：这里不支持动态进入 cluster ? cluster 可以自动变大变小。
+<a name="dynamic_cluster"></a>问题：这里不支持动态进入 cluster ? cluster 可以自动变大变小。
 
 问题：[可能是一个 bug](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L135) 因为 `ejabberd_app::start_app` 中没有使用 Type。提交了 pull request。
 
@@ -87,7 +87,7 @@ modules 是否都已经加载了。相关的系统 API 有。
 
 [这里启动一个空循环的进程](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L109)
 
-问题：`ejabberd:start/2` 和 `ejabberd:start/0` 完全不相关，这个有些怪异。
+<a name="style1"></a>问题：`ejabberd:start/2` 和 `ejabberd:start/0` 完全不相关，这个有些怪异。
 
 
 ## [translate:start](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L51)
@@ -266,8 +266,11 @@ x:
 
 ## [acl:start()](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L58)
 
+<a name="acl_init"></a>
 [创建表格](https://github.com/wcy123/ejabberd/blob/fb6267f38ee47f3f725f88324d132741c85dfb6a/src/acl.erl#L73)
 acl , access 。然后从配置文件初始化表格。
+
+
 
 问题：创建这么多 `local_content` 的表格，为啥不用 ets ?
 
@@ -283,7 +286,7 @@ acl , access 。然后从配置文件初始化表格。
 
 参数 `cluster_nodes` 控制的，[链接所有节点。](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L176)
 
-问题：似乎不知道动态增加/删除节点？
+<a name="dynamic_cluster2"></a>问题：似乎不知道动态增加/删除节点？
 
 如果可以支持这个功能，那么 cluster 就变成活的，只要有一个节点不死，
 cluster 就可以慢慢长大。
@@ -325,14 +328,17 @@ cluster 就可以慢慢长大。
 
 在 [ejabberd_sub](https://github.com/wcy123/ejabberd/blob/fb6267f38ee47f3f725f88324d132741c85dfb6a/src/ejabberd_sm.erl#L107) 增加 child 。
 
+<a name="app_deps2"></a>
 疑问，为啥不在 `ejabberd_sup` 中直接加 child spec 呢？有执行顺序问题？
+回答。是的，有执行顺序问题，`ejabberd_sm` 需要根据参数来初始化不同的模块，所以要等待 `ejabberd_config:start` 之后运行。
+
 
 ## [cyrsasl:start](https://github.com/wcy123/ejabberd/blob/dcf5aefea0363cc96d404591696e306fc323d8f5/src/ejabberd_app.erl#L65)
 
 
 [启动下面的东西](https://github.com/wcy123/ejabberd/blob/fb6267f38ee47f3f725f88324d132741c85dfb6a/src/cyrsasl.erl#L83) 这个也不是启动。因为没有创建任何近程。
 
-  - [创建表格 sasl_mechanism](https://github.com/wcy123/ejabberd/blob/fb6267f38ee47f3f725f88324d132741c85dfb6a/src/cyrsasl.erl#L80)
+  - <a name="table_sasl_mechanism"></a>[创建表格 sasl_mechanism](https://github.com/wcy123/ejabberd/blob/fb6267f38ee47f3f725f88324d132741c85dfb6a/src/cyrsasl.erl#L80)
   - `cyrsasl_plain`
   - `cyrsasl_digest`
   - `cyrsasl_scram`
@@ -362,6 +368,7 @@ cluster 就可以慢慢长大。
 
 ### [start_listeners](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L85)
 
+<a name="c2s_access"></a>
 1. 参数 listen 控制 [ejabberd_config:get_option(listen, fun validate_cfg/1)](https://github.com/wcy123/ejabberd/blob/1cf2dfe63afe0994988e756dfbb82524f50f6af8/src/ejabberd_listener.erl#L86)
 
 ```
@@ -489,7 +496,7 @@ Opt = [{access,c2s},{shaper,c2s_shaper},{max_stanza_size,65536}]
                该怎么办了。从 [wait_for_stream](https://github.com/wcy123/ejabberd/blob/1048e21643cb610f112f8dc95d32e3230b819361/src/ejabberd_c2s.erl#L354) 开始。
            21. [case SockMod:controlling_process(Socket, Receiver)](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L106)
                把 socket 控制权给 `ejabberd_receiver`。
-           22. [{error, _Reason} -> SockMod:close(Socket)](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L108)
+           22. [{error, _Reason} -> SockMod:close(Socket)](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L108) <a name="let_it_crash_1"></a>
                这里如果传递失败居然不 crash! 还好，这种概率非常低。但
                是负载高的时候也会发生问题。
            23. [ReceiverMod:become_controller](https://github.com/wcy123/ejabberd/blob/ba69c469b551e77929bd1a6eb3fd16a82ef13687/src/ejabberd_socket.erl#L110)
