--- a/_posts/2015-08-08-ej-的设计改进.md
+++ b/_posts/2015-08-08-ej-的设计改进.md
@@ -115,3 +115,42 @@ todo: 增加参考链接。
 
  - `send(xml)`
  - 主动发送消息，xml stream
+
+
+
+
+## 什么时候会生成 crash reprot?
+
+参考 SASL 1.2.3 Crash report
+
+如果使用 `proc_lib:spwarn` 或者 `proc_lib:spawn_link` 创建进程，那么进
+程出现意外的时候会产生 crash report。
+
+
+## 会出现悬空 socket
+
+Socket 的控制权交还给主进程，但是 Socket 的状态是 `{active, false}` ，
+所以 `tcp_closed` 的消息也收不到。
+
+### 解决方案 1
+
+每当交还给主进程之后，都设置 `{active, once}`， 这样不行，因为在实现速
+率控制的时候，也许客户不想这么快 active。
+
+### 解决方案 2
+
+当控制权交还给主进程之后，检查 `{active, false}`， 如果是 false ，那么
+就调用 `gen_tcp:recv` , timeout = 0。这样也不行。 如果对方没有关闭 tcp
+，那么也不行。
+
+### 解决方案  3
+
+定时检查所有  socket ，看是否有数据。这个是轮训的机制，效率低下。
+
+### 分析
+
+产生这种问题的根本原因是 ”回调模块“ 没有处理好。似乎不能相信”回调“模块
+会处理好。不能把控制 active 的权限给 ”回调“ 模块。 那么如何实现流控呢？
+提供 throttle  函数。
+
+现在采用方案 1 ，以后再提供 throttle 函数。
