install jekyll and fix some errors.

--- a/_posts/2015-07-08-C------------.md
+++ b/_posts/2015-07-08-C------------.md
@@ -191,8 +191,9 @@ function 怎么译？）
 
 有很多时候，对象是可移动的而是不可以拷贝的。上面参考文献给出三个例子
 
+
 1. `fstream`
-2. `unique_ptr` (这里)[{{site.baseurl}}/{% post_url 2015-07-08-C-------feature--unique-ptr %})]
+2. `unique_ptr` (这里)[{{site.baseurl}}/{% post_url 2015-07-08-C-------feature--unique-ptr %}
 3. 线程对象
 
 如果拷贝构造函数是私有函数，那么就是被禁止的。C++11 中有新特性，可以定
