--- a/_posts/2015-08-24-离线数据优化的可行性分析.md
+++ b/_posts/2015-08-24-离线数据优化的可行性分析.md
@@ -29,11 +29,13 @@ $$
 
 $$
 T_1 \leq T_0
-
 $$
 
-
+简单化简
 
 $$
-E = M C^2
+\frac{R_l}{R_e} \leq \rho
 $$
+
+也就是说，llen 的操作时间喝 lrange 再无用户数据的情况下的操作时间的比
+值小于无离线消息的概率。
