--- a/_posts/2015-08-24-离线数据优化的可行性分析.md
+++ b/_posts/2015-08-24-离线数据优化的可行性分析.md
@@ -8,7 +8,7 @@ draft: true
 ---
 
 
- - $$ \rho = 97% $$ 无离线数据的概率，大多数用户无离线数据。
+ - $$ \rho = 97\% $$ 无离线数据的概率，大多数用户无离线数据。
  - $$ R_e $$ 每次无离线数据(empty)时，lrange 的操作时间。
  - $$ R_x $$ 每次有离线数据的时候， lrange 的操作时间。
  - $$ R_l $$ 每次 llen 的操作时间
@@ -22,7 +22,7 @@ $$
 改进方法的平均操作时间时，即先用 llen 判断，如果有数据再使用 lrange
 
 $$
-T_1 = 100% * R_l + ( 1 - \rho ) R_x
+T_1 = 100\% * R_l + ( 1 - \rho ) R_x
 $$
 
 我们期待
