--- a/_posts/2015-08-24-离线数据优化的可行性分析.md
+++ b/_posts/2015-08-24-离线数据优化的可行性分析.md
@@ -22,7 +22,7 @@ $$
 改进方法的平均操作时间时，即先用 llen 判断，如果有数据再使用 lrange
 
 $$
-T_1 = 100\% * R_l + ( 1 - \rho ) R_x
+T_1 = 100\%  R_l + ( 1 - \rho ) R_x
 $$
 
 我们期待
