--- a/_posts/2015-08-25-ejabberd-消息堵塞分析.md
+++ b/_posts/2015-08-25-ejabberd-消息堵塞分析.md
@@ -4,6 +4,7 @@ title:  "ejabberd 消息堵塞分析"
 date:   2015/08/25 14:27:55
 categories:
 comments: true
+draft: true
 ---
 
 ## log 构建 11431 (2015-8-25 11:47:00)
