--- a/_posts/2015-08-25-ejabberd-消息堵塞分析.md
+++ b/_posts/2015-08-25-ejabberd-消息堵塞分析.md
@@ -293,3 +293,151 @@ message in pid <6562.25870.402> :
 ## 25746 2015-8-22 18:04:00
 
 类似  `snh-48#pocket48_76366185259598244@conference.easemob.com`
+
+
+```
+(ejabberd@ebs-ali-beijing-5-pri)1> muc_mnesia:rpc_get_online_room(<<"snh-48#pocket48_76366185259598244">>, <<"conference.easemob.com">>).
+[{muc_online_room,{<<"snh-48#pocket48_76366185259598244">>,
+                   <<"conference.easemob.com">>},
+                   <19007.783.478>}]
+
+```
+
+
+# 从头分析
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/23101/console)
+
+mysql
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/23469/console)
+
+- "tusou001#v40_77605680705438120@conference.easemob.com"
+- Pid = 6562.21505.3
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/23483/console)
+
+- "tusou001#v40_77605680705438120@conference.easemob.com"
+- Pid = 6562.21505.3
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/23747/console)
+
+- Pid = 6562.2268.0
+- Process dead before checking
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24119/console)
+
+- Pid = 6562.21505.3
+- "tusou001#v40_77605680705438120@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24143/console)
+
+- Pid = 6562.21505.3
+- "tusou001#v40_77605680705438120@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24170/console)
+
+- Pid = 6562.21505.3
+- "tusou001#v40_77605680705438120@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24228/console)
+
+- Pid = 6562.18009.3390
+- mysql
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24282/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24340/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24430/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24433/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/24719/console)
+
+unknown
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25330/console)
+
+- Pid 6562.25870.402
+- "snh-48#pocket48_76366191207121304@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25341/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25394/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25731/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25746/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25781/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25808/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25846/console)
+
+- Pid = 6562.783.478
+- "snh-48#pocket48_76366185259598244@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25864/console)
+
+- Pid = 6562.25870.402
+- "snh-48#pocket48_76366191207121304@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25870/console)
+
+- Pid - 6562.21911.478, "snh-48#pocket48_76366185993601452@conference.easemob.com"
+- Pid - 6562.783.478 second "snh-48#pocket48_76366191207121304@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/25877/console)
+
+- Pid - 6562.25870.402
+- "snh-48#pocket48_76366191207121304@conference.easemob.com"
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/27044/console)
+
+- Pid - 6562.18467.5386
+- sql
+
+## [log](http://ci.easemob.com/job/ProductCI_ejabberd_mqueue_random_monitor/27140/console)
+
+- Pid - 6562.26699.4254
+- Process dead before checking
+- Pid 6562.25972.4111 is the second
+
+
+有三个群出现过问题
+
+1. "tusou001#v40_77605680705438120@conference.easemob.com" 出现 4 次
+2. "snh-48#pocket48_76366185259598244@conference.easemob.com" 出现 11 次
+3. "snh-48#pocket48_76366191207121304@conference.easemob.com" 出现 2 次
