--- a/_posts/2015-08-25-ejabberd-消息堵塞分析.md
+++ b/_posts/2015-08-25-ejabberd-消息堵塞分析.md
@@ -32,7 +32,7 @@ processes sorted by queue_len desc:
 
 头20个为处理的消息是
 
-<pre>
+```
 [{'$gen_call',{<7091.32103.5792>,#Ref<7091.0.87991.137462>},
                {call,mnesia_lib,db_get,
                      [session_frag29,
@@ -40,8 +40,8 @@ processes sorted by queue_len desc:
                        <<"mobile">>}],
                      <7089.3018.0>}},
   {'$gen_call',{<7092.14074.2311>,#Ref<7092.0.73855.182955>},
-               {call,<span style="color:red">mnesia_lib,db_get,</span>
-                     [<span style="color:red">session_frag29,</span>
+               {call,mnesia_lib,db_get,
+                     [session_frag29,
                       {<<"intech#in_0ciha2edkdvzbi">>,<<"easemob.com">>,
                        <<"mobile">>}],
                      <7089.3018.0>}},
@@ -66,7 +66,9 @@ processes sorted by queue_len desc:
   {<6555.411.8072>,{reply,[{ {1440,474421,964666},<7098.8910.2093>}]}},
   {<6555.3401.8072>,{reply,[]}},
   {<6555.32475.8071>,{reply,[]}}]
-</pre>
+
+```
+
 
 代码搜索关键字 `session_frag` 找到唯一匹配的地方 [frag_name(N) -> list_to_atom("session_frag"++integer_to_list(N))..](https://github.com/easemob/ejabberd/blob/f2c2175defbe1a253e56ec37e2f361460e345e65/src/ejabberd_sm.erl#L1032-#L1034)。
 
