--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -18,3 +18,48 @@ comments: true
 ![ying-yan][]
 
 [ying-yan]: https://mitpress.mit.edu/sicp/full-text/book/ch4-Z-G-1.gif
+
+
+一个语言的解释器，就是一个 eval 函数，就是求值函数：
+
+ * 输入： 一个表达式 `s-exp`
+ * 输出： 一个表达式 `s-exp`
+
+这个解释器的核心就是 `apply` 和 `eval` 之间的互递归调用。
+
+## 什么是 `s-exp` 和 `s-exp` 的求值规则
+
+### 原始类型
+
+原始类型是一个 `s-exp` ，求值就是 `s-exp` 本身。包括：整数，浮点数，字符串。例如
+
+```
+1  => 1
+1.2 => 1.2
+"abc" => "abc"
+```
+
+这个规则看上去很简单，但是很重要，他是递归求值的终止条件。也就是说，
+`eval` 函数碰到这些原始类型的 `s-exp` ，不会递归调用 `apply` 。
+
+根据这个规则，我们写一个函数
+
+```
+(define (my-eval exp env)
+  (cond ((self-evaluating? exp) exp)
+        (else (error "Unknown expression type -- EVAL" exp))))
+
+(define (self-evaluating? exp)
+  (cond ((number? exp) #t)
+        ((string? exp) #t)
+        (else #f)))
+```
+
+我们运行一下这个函数。
+
+
+
+### 特殊型 (special form)
+
+#### quote 引用
+这个规则也是一个终止条件。
