--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -44,7 +44,7 @@ comments: true
 
 根据这个规则，我们写一个函数
 
-```
+```scheme
 (define (my-eval exp env)
   (cond ((self-evaluating? exp) exp)
         (else (error "Unknown expression type -- EVAL" exp))))
